--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="c_divider">#E4E2E2</color>
+    <color name="c_divider">#51D84C</color>
+    <color name="c_f1d6f1">#87E6D1</color>
 </resources>
