--- a/app/src/main/res/layout/activity_test_adapter.xml
+++ b/app/src/main/res/layout/activity_test_adapter.xml
@@ -4,20 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
-<Button
-    android:id="@+id/btTestAdapter"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textAllCaps="false"
-    android:text="testAdapter"
-    />
+    tools:context=".test.TestAdapterActivity">
+
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv"
+        android:id="@+id/rvTest"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </android.support.v7.widget.RecyclerView>
-
+        android:layout_height="match_parent" />
 </LinearLayout>
