--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,13 @@
         android:textAllCaps="false"
         android:text="testLoadAdapter"
         />
+    <Button
+        android:id="@+id/btTestRangeItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:text="testRangeItem"
+        />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
