--- a/app/src/main/res/layout/activity_expandable.xml
+++ b/app/src/main/res/layout/activity_expandable.xml
@@ -12,14 +12,14 @@
     android:orientation="horizontal"
     android:gravity="center_vertical"
     >
-    <android.support.v7.widget.AppCompatCheckBox
+    <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/cbNotify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="更新数据"
         android:checked="true"
         />
-    <android.support.v7.widget.AppCompatCheckBox
+    <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/cbShowAnim"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -46,7 +46,7 @@
             android:text="展开所有item"
             android:textAllCaps="false" />
 
-        <android.support.v7.widget.AppCompatCheckBox
+        <androidx.appcompat.widget.AppCompatCheckBox
             android:id="@+id/cbExpandFlag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -67,14 +67,14 @@
             android:text="折叠所有item"
             android:textAllCaps="false" />
 
-        <android.support.v7.widget.AppCompatCheckBox
+        <androidx.appcompat.widget.AppCompatCheckBox
             android:id="@+id/cbCollapseFlag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="折叠某个item时折叠所有子item" />
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvExpandable"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
